# mrtc

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  RFC_COMPLIANCE.md  ROADMAP.md
.github/: copilot-instructions.md
app/: CMakeLists.txt
app/chat/: CMakeLists.txt  main.c
app/conf_sdl/: ARCHITECTURE.md  CMakeLists.txt  main.c  ui_sdl3.c  ui_sdl3.h
client/: ARCHITECTURE.md  CMakeLists.txt
client/include/rtc/: rtc_client.h  rtc_data_channel.h  rtc_peer.h  rtc_track.h
client/src/: rtc_client_runtime.c  rtc_client_runtime.h  rtc_data_channel.c  rtc_data_channel_internal.h  rtc_peer.c  rtc_peer_internal.h  rtc_peer_packets.c  rtc_track.c
client/tests/: test_data_channel.c  test_peer.c  test_rtp_sender_loopback.c
common/: ARCHITECTURE.md  CMakeLists.txt
common/include/rtc/: rtc_common.h  rtc_str_map.h  rtc_types.h  rtc_u32_map.h  rtc_vec.h
common/src/: rtc_common.c  rtc_str_map.c  rtc_u32_map.c  rtc_vec.c
common/tests/: test_str_map.c  test_u32_map.c  test_vec.c
conference/: ARCHITECTURE.md  CMakeLists.txt
conference/include/conference/: conference.h
conference/src/: conference.c
media/: ARCHITECTURE.md  CMakeLists.txt
media/include/media/: audio_codec.h  media_pipeline.h  test_pattern.h  test_tone.h  video_codec.h  video_stats.h
media/src/: audio_codec.c  codec_opus.c  codec_vp8.c  jitter_buffer.c  jitter_buffer.h  media_pipeline.c  rate_control.c  rate_control.h  test_pattern.c  test_tone.c  video_codec.c  video_debug.c  video_debug.h  video_dump.c  video_dump.h  video_stats.c  vp8_packetizer.c  vp8_packetizer.h
media/tests/: test_audio_codec.c  test_jitter_buffer.c  test_media_pipeline.c  test_rate_control.c  test_video_codec.c  test_video_debug.c  test_video_dump.c  test_video_stats.c  test_vp8.c
routing/: ARCHITECTURE.md  CMakeLists.txt
routing/include/rtc/: rtc_consumer.h  rtc_producer.h  rtc_router.h
routing/src/: rtc_consumer.c  rtc_consumer_internal.h  rtc_producer.c  rtc_producer_internal.h  rtc_router.c  rtc_router_internal.h
routing/tests/: test_routing_ice.c  test_routing_timers.c  test_routing_transport.c
rtc/: ARCHITECTURE.md  CMakeLists.txt
rtc/include/rtc/: rtc.h  rtc_bwe.h  rtc_consumer.h  rtc_data_channel.h  rtc_interceptor.h  rtc_listener.h  rtc_media_session.h  rtc_peer.h  rtc_producer.h  rtc_router.h  rtc_rtcp.h  rtc_rtcp_router.h  rtc_rtp.h  rtc_rtp_ext.h  rtc_rtp_params.h  rtc_rtp_stream.h  rtc_sdp.h  rtc_sfu.h  rtc_stats.h  rtc_stun.h  rtc_track.h  rtc_transport.h  rtc_turn.h  rtc_worker.h
rtc/src/: rtc_bwe.c  rtc_client_runtime.c  rtc_consumer.c  rtc_consumer_internal.h  rtc_data_channel.c  rtc_dtls.c  rtc_dtls.h  rtc_ice.c  rtc_ice.h  rtc_interceptor.c  rtc_listener.c  rtc_listener_internal.h  rtc_media_session.c  rtc_nack_buf.c  rtc_nack_buf.h  rtc_packet_io.c  rtc_packet_io.h  rtc_peer.c  rtc_peer_internal.h  rtc_peer_packets.c  rtc_poller.c  rtc_poller.h  rtc_producer.c  rtc_producer_internal.h  rtc_rate_control.c  rtc_rate_control.h  rtc_router.c  rtc_router_internal.h  rtc_rtcp.c  rtc_rtcp.h  rtc_rtcp_router.c  rtc_rtp.c  rtc_rtp.h  rtc_rtp_demux.c  rtc_rtp_demux.h  rtc_rtp_ext.c  rtc_rtp_ext.h  rtc_rtp_stream.c  rtc_sdp.c  rtc_sdp.h  (+19 more)
rtc/tests/: test_bwe.c  test_data_channel.c  test_dtls.c  test_ice.c  test_interceptor.c  test_listener.c  test_loopback.c  test_media_session.c  test_nack_buf.c  test_packet_io.c  test_peer.c  test_poller.c  test_rate_control.c  test_rtcp.c  test_rtcp_feedback.c  test_rtcp_router.c  test_rtp.c  test_rtp_demux.c  test_rtp_ext.c  test_sdp.c  test_sdp_video.c  test_sfu_ice.c  test_sfu_media.c  test_sfu_sender.c  test_sfu_timers.c  test_sfu_transport.c  test_srtp.c  test_stun.c  test_timer_sched.c  test_transport.c  test_turn.c  test_twcc.c  test_worker.c
signaling/: ARCHITECTURE.md  CMakeLists.txt
signaling/include/signaling/: signaling_client.h  signaling_msg.h
signaling/server/: meeting.c  meeting.h  signaling_server.c
signaling/src/: signaling_client.c  signaling_msg.c
signaling/tests/: test_signaling.c  test_signaling_msg.c
tests/: test_harness.h
turn/: ARCHITECTURE.md  CMakeLists.txt  turn_handler.c  turn_handler.h  turn_server.c
